--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,3 +29,20 @@ jobs:
           soft_fail: true  # don't want to fail the step, because of found findings
           download_external_modules: true
           github_pat: ${{ secrets.TEST_PAT_TOKEN }}
+          
+  scan:
+    runs-on: ubuntu-latest 
+    strategy:
+      matrix: 
+        python-version: [3.8]
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Run Prisma Cloud 
+        id: PrismaCloud
+        uses: bridgecrewio/checkov-action@master 
+        env:
+          PRISMA_API_URL: https://api4.prismacloud.io
+        with:
+          api-key: ${{ secrets.BC_API_KEY }}
